Radixwalk initial implementation
Change-Id: I45347e3046a22d9fac09884f1e92276675c10781

--- a/src/arch/power/SConscript
+++ b/src/arch/power/SConscript
@@ -48,6 +48,7 @@ if env['TARGET_ISA'] == 'power':
     Source('isa.cc')
     Source('pagetable.cc')
     Source('process.cc')
+    Source('radixwalk.cc')
     Source('system.cc')
     Source('remote_gdb.cc')
     Source('stacktrace.cc')
